<resources>
    <string name="app_name">TaskApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_sure_you_want_to_delete">Вы точно хотите удалить?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="number">number</string>
    <string name="save">save</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="data">Data</string>
    <string name="todo">TODO</string>
    <string name="here_you_can_write_down_something_important_or_make_a_schedule_for_tomorrow">Here you can write down something important or make a schedule for tomorrow:)</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="start">Start</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="update">Update</string>
    <string name="send">Send</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_code">Enter code</string>
</resources>