<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    app:cardCornerRadius="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="128dp"
        app:cardElevation="15dp"
        >

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/profiles"
            android:contentDescription="@string/todo" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textColor="@color/grey"
        android:text="@string/title"
        android:layout_marginTop="19dp"
        android:textStyle="bold"
        android:layout_marginStart="162dp"
        app:layout_constraintStart_toEndOf="@id/card"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="61dp"
        android:text="@string/description"
        android:textColor="@color/grey"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/card"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/data"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/data"
        android:textColor="@color/grey"
        android:layout_marginStart="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main_color"
        app:layout_constraintTop_toBottomOf="@id/tv_desc"
        android:layout_marginTop="125dp"/>


</androidx.cardview.widget.CardView>

