<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">


  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/ground"
      android:layout_width="match_parent"
      android:layout_height="230dp"
      android:orientation="vertical"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:background="@drawable/profile">

      <com.google.android.material.button.MaterialButton
          android:id="@+id/btn_red"
          android:layout_width="80dp"
          android:layout_marginTop="10dp"
          android:text="Выйти с акаунта"
          android:textSize="9sp"
          android:layout_height="45dp"
          android:layout_marginEnd="20dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:backgroundTint="@color/red"/>


      <androidx.cardview.widget.CardView
          android:id="@+id/card"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          android:layout_marginTop="50dp"
          android:layout_width="150dp"
          android:layout_height="150dp"
          app:cardCornerRadius="128dp"
          app:cardElevation="15dp"
          >

          <ImageView
              android:id="@+id/imageView"
              android:src="@drawable/profiles"
              android:scaleType="centerCrop"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:contentDescription="@string/todo" />
      </androidx.cardview.widget.CardView>
  </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_title"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/ground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_desc"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/et_layout_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout_data"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/et_layout_desc"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textPhonetic"
            android:id="@+id/phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/et_layout_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/gender"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_data"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/date_of_birth"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/et_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:id="@+id/data"/>
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
